Archive2/5a/eae524d3011fa4/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:16:1: error: expected ';' before '}' token
 }
 ^
